# uros

./: .gitignore  CMakeLists.txt  README.md  compile.sh  dependencies  run.sh  uros.kdev4
.kdev4/: uros.kdev4
cmake/: make_iso.cmake  profile_detection.cmake
src/: cscope.out  tags
src/arch/x86/: boot.asm  main32.cpp  main64.cpp  memory.h
src/arch/x86_64/: boot.asm  bootparam.h  data.asm  idt.cpp  idt.h  long_mode_init.asm  main.cpp  main32.cpp  main64.cpp  multiboot_header.asm
src/arch/x86_64/boot/: boot.asm  gdt.asm  layout.ld  long_mode_init.asm  multiboot_header.asm  paging.asm  stack.asm  tss.asm
src/arch/x86_64/core/: fault.h  stub.h
src/drivers/: vga.cpp  vga.h
src/libc/: types.h
src/utils/: fmt.h  print_type.h  types.h
